[package]
name = "looniverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
hex = "0.4.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
log = "0.4.21"
libp2p = { version = "0.53.2", features = ["tokio", "tcp", "floodsub", "mdns", "macros", "noise", "yamux"] }
once_cell = "1.19.0"
tokio = { version = "1.37.0" , features = ["sync", "rt", "rt-multi-thread", "macros", "io-std", "io-util", "tokio-macros"] }
pretty_env_logger = "0.5.0"
